@@ -1,12 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2017/03/07 18:15:21 minskim Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/requests_ftp/__init__.py
-${PYSITELIB}/requests_ftp/__init__.pyc
-${PYSITELIB}/requests_ftp/__init__.pyo
-${PYSITELIB}/requests_ftp/ftp.py
-${PYSITELIB}/requests_ftp/ftp.pyc
-${PYSITELIB}/requests_ftp/ftp.pyo
