@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2021/10/26 10:19:01 nia Exp $
-
-BLAKE2s (requests-ftp-0.3.1.tar.gz) = a44a6422a366bf986d5306ecdf551dd0ad342ecdd11b06edd424f7aef09f1eb6
-SHA512 (requests-ftp-0.3.1.tar.gz) = dfd3bc590a5a7e62d541d1100b424371e1eab2b548131fef8a39332727cb59f5059700f62e1fd870860bf11829a8117e80bc484f3be6c64a1bf94f8a1ec205ba
-Size (requests-ftp-0.3.1.tar.gz) = 7850 bytes
