@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.3266 2022/07/08 14:32:20 wiz Exp $
+$NetBSD: CHANGES-2022,v 1.3267 2022/07/08 14:35:08 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -4903,3 +4903,4 @@ Changes to the packages collection and infrastructure in 2022:
 	Removed net/py-softlayer_messaging [wiz 2022-07-08]
 	Updated net/py-dropbox to 11.32.0 [wiz 2022-07-08]
 	Updated finance/py-stripe to 3.5.0 [wiz 2022-07-08]
+	Removed devel/py-requests-ftp [wiz 2022-07-08]
